--- a/searchservice.properties
+++ b/searchservice.properties
@@ -1,5 +1,5 @@
-spring.rabbitmq.host = localhost
-spring.rabbitmq.port = 5672
-spring.rabbitmq.username = guest
-spring.rabbitmq.password = guest
-originairports.shutdown : SEA
+server.port : 9002
+eureka.instance.appname : searchservice
+eureka.client.registerWithEureka : true
+eureka.client.fetchRegistry : true
+eureka.client.serviceUrl.defaultZone : http://localhost:9002/eureka/
